# gloger_android

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build-and-release-all-platform.yml  build-and-release.yml
proto/: log.proto
src/: error.rs  file_reader.rs  glog.rs  glog_reader.rs  lib.rs  main.rs  proto.rs  version.rs
src/reader/: mod.rs  v3.rs  v4.rs
